{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 294,
  "lineage": "414d8df2-32cd-f2b2-eb3b-d11c3587922b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587425951590:loadbalancer/app/load-balancer-dev/d66a4f40228fd2ba",
            "arn_suffix": "app/load-balancer-dev/d66a4f40228fd2ba",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-dev-1842764609.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:587425951590:loadbalancer/app/load-balancer-dev/d66a4f40228fd2ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084314f1408ca2ac2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b0b06587cc87572"
              },
              {
                "subnet_id": "subnet-0e0a5f15e95bc7b68"
              }
            ],
            "subnets": [
              "subnet-02b0b06587cc87572",
              "subnet-0e0a5f15e95bc7b68"
            ],
            "vpc_id": "vpc-094ddd02e80e5e9bc",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587425951590:subnet/subnet-02b0b06587cc87572",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-02b0b06587cc87572",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587425951590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-094ddd02e80e5e9bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587425951590:subnet/subnet-0e0a5f15e95bc7b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0e0a5f15e95bc7b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "587425951590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-094ddd02e80e5e9bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587425951590:vpc/vpc-094ddd02e80e5e9bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-09c8b3d1f928b707c",
            "default_route_table_id": "rtb-01302c82b3ab62b25",
            "default_security_group_id": "sg-0703f6beb32b32fdc",
            "dhcp_options_id": "dopt-0a776d05fa4017a11",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": true,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-094ddd02e80e5e9bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01302c82b3ab62b25",
            "owner_id": "587425951590"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587425951590:listener/app/load-balancer-dev/d66a4f40228fd2ba/fadaab47c30e1e58",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587425951590:targetgroup/target-group/af0214a4ba0e4ea2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587425951590:listener/app/load-balancer-dev/d66a4f40228fd2ba/fadaab47c30e1e58",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587425951590:loadbalancer/app/load-balancer-dev/d66a4f40228fd2ba",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587425951590:targetgroup/target-group/af0214a4ba0e4ea2",
            "arn_suffix": "targetgroup/target-group/af0214a4ba0e4ea2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587425951590:targetgroup/target-group/af0214a4ba0e4ea2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-094ddd02e80e5e9bc"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587425951590:security-group/sg-084314f1408ca2ac2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084314f1408ca2ac2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230826180744342500000001",
            "name_prefix": "terraform-",
            "owner_id": "587425951590",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094ddd02e80e5e9bc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587425951590:security-group/sg-0512e67220da890e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0512e67220da890e1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-084314f1408ca2ac2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230826180746800700000004",
            "name_prefix": "terraform-",
            "owner_id": "587425951590",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094ddd02e80e5e9bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}